--- a/common/src/main/resources/assets/fastregions/lang/en_us.json
+++ b/common/src/main/resources/assets/fastregions/lang/en_us.json
@@ -3,5 +3,7 @@
   "key.fastregions.error.players_only": "Only players can use this command",
   "key.fastregions.create.error.missing": "First you need to select the region with /region pos1 and /region pos2.",
   "key.fastregions.create.success": "Region %s in the world %s created successfully.",
-  "key.fastregions.create.error.used_name": "The name %s is already used, please use another name."
+  "key.fastregions.create.error.used_name": "The name %s is already used, please use another name.",
+  "key.fastregions.priority.error.unknown_region": "There is no region named \"%s\" in this world.",
+  "key.fastregions.priority.success": "The region %s priority has been modified from %d to %d."
 }
