--- a/common/src/main/resources/assets/fastregions/lang/en_us.json
+++ b/common/src/main/resources/assets/fastregions/lang/en_us.json
@@ -5,5 +5,6 @@
   "key.fastregions.create.success": "Region %s in the world %s created successfully.",
   "key.fastregions.create.error.used_name": "The name %s is already used, please use another name.",
   "key.fastregions.priority.error.unknown_region": "There is no region named \"%s\" in this world.",
-  "key.fastregions.priority.success": "The region %s priority has been modified from %d to %d."
+  "key.fastregions.priority.success": "The region %s priority has been modified from %d to %d.",
+  "key.fastregions.expand_vert.success": "Region has been expanded to minY: %d maxY: %d"
 }
