--- a/common/src/main/resources/assets/fastregions/lang/en_us.json
+++ b/common/src/main/resources/assets/fastregions/lang/en_us.json
@@ -4,7 +4,11 @@
   "key.fastregions.create.error.missing": "First you need to select the region with /region pos1 and /region pos2.",
   "key.fastregions.create.success": "Region %s in the world %s created successfully.",
   "key.fastregions.create.error.used_name": "The name %s is already used, please use another name.",
-  "key.fastregions.priority.error.unknown_region": "There is no region named \"%s\" in this world.",
+  "key.fastregions.error.unknown_region": "There is no region named \"%s\" in this world.",
   "key.fastregions.priority.success": "The region %s priority has been modified from %d to %d.",
-  "key.fastregions.expand_vert.success": "Region has been expanded to minY: %d maxY: %d"
+  "key.fastregions.expand_vert.success": "Region has been expanded to minY: %d maxY: %d",
+  "key.fastregions.flags.add.success": "Flag %s has been added to %s.",
+  "key.fastregions.flags.add.error": "The region %s already have the flag %s.",
+  "key.fastregions.flags.remove.success": "Flag %s has been removed from %s.",
+  "key.fastregions.flags.remove.error": "The region %s doesn't have the flag %s."
 }
